Fix icon alignment, add downloading state of UX

--- a/cv_react/src/index.css
+++ b/cv_react/src/index.css
@@ -3,3 +3,11 @@
 * {
   font-family: Calibri, "Gill Sans", "Gill Sans MT", "Trebuchet MS", sans-serif;
 }
+
+body {
+  line-height: 0.5 !important;
+}
+
+#resume {
+  line-height: normal;
+}
